--- a/SportsSideKick/app/src/main/res/layout/fragment_video_player.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_video_player.xml
@@ -55,7 +55,7 @@
             android:layout_marginEnd="10dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/rounded_button_press"
-            android:text="PLAYLIST"
+            android:text="@string/playlist"
             android:textSize="10sp"
             android:textColor="@color/white" />
 
@@ -107,7 +107,7 @@
         android:gravity="center"
         android:lines="1"
         android:padding="8dp"
-        android:text="00:00 / 00:00"
+        android:text="@string/default_time"
         android:textColor="@color/lightGrey"
         android:textSize="12sp" />
 
