--- a/SportsSideKick/app/src/main/res/layout/friend_request_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/friend_request_item.xml
@@ -25,15 +25,14 @@
         android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/white"
-        android:text="USER NAME"/>
+        android:textColor="@color/white"/>
     <TextView
         android:id="@+id/date_prefix"
         android:layout_below="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/white"
-        android:text="Requested on"/>
+        android:text="@string/requested_on"/>
     <TextView
         android:id="@+id/date"
         android:layout_width="wrap_content"
@@ -41,8 +40,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/name"
         android:layout_toEndOf="@+id/date_prefix"
-        android:textColor="@color/white"
-        android:text="05.12.2016"/>
+        android:textColor="@color/white"/>
     </RelativeLayout>
 
     <RelativeLayout
