--- a/SportsSideKick/app/src/main/res/layout/popup_your_friends.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_your_friends.xml
@@ -80,7 +80,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="No result"
+            android:text="@string/no_result"
             android:visibility="gone"
             android:textColor="@color/white_semitransparent"/>
 
