--- a/SportsSideKick/app/src/main/res/values/colors.xml
+++ b/SportsSideKick/app/src/main/res/values/colors.xml
@@ -29,6 +29,8 @@
     <color name="wall_shop_description_text_color">#0be5ff</color>
     <color name="black">#000000</color>
 
+    <color name="red">#d10212</color>
+
     <color name="chat_input_edit_text_background">#e9eaed</color>
     <color name="wall_store_color">#fc6120</color>
     <color name="rumour_yellow">#fcfd42</color>
