--- a/SportsSideKick/app/src/main/res/layout/fragment_with_web_view.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_with_web_view.xml
@@ -5,61 +5,92 @@
     android:layout_height="match_parent"
     tools:context="tv.sportssidekick.sportssidekick.fragment.instance.StoreFragment">
 
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/navigation_web_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone">
+        android:orientation="vertical"
+        android:visibility="visible">
 
         <WebView
             android:id="@+id/web_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="visible"/>
+            android:layout_weight="1"
+            android:visibility="visible" />
 
-        <Button
-            android:id="@+id/close_button"
-            android:layout_width="@dimen/standard_button_height"
-            android:layout_height="@dimen/standard_button_height"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:background="@drawable/close_button" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="42dp"
+            android:background="@color/colorPrimary"
+            android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/refresh_button"
-            android:layout_width="@dimen/standard_button_height"
-            android:layout_height="@dimen/standard_button_height"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true"
-            android:background="@drawable/refresh_button_left" />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
 
-        <Button
-            android:id="@+id/share_to_wall_button"
-            android:layout_width="@dimen/standard_button_height"
-            android:layout_height="@dimen/standard_button_height"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:background="@drawable/share_to_wall" />
+                <ImageView
+                    android:id="@+id/back_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:layout_margin="5dp"
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/ic_back" />
+            </RelativeLayout>
 
-        <Button
-            android:id="@+id/back_button"
-            android:layout_width="@dimen/standard_button_width_half"
-            android:layout_height="@dimen/standard_button_height"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            android:alpha="0.5"
-            android:background="@drawable/back_button"
-            android:onClick="" />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
 
-        <Button
-            android:id="@+id/forward_button"
-            android:layout_width="@dimen/standard_button_width_half"
-            android:layout_height="@dimen/standard_button_height"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:alpha="0.5"
-            android:background="@drawable/forward_button" />
-    </RelativeLayout>
+                <ImageView
+                    android:id="@+id/home_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:layout_margin="5dp"
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/ic_home"
+                    android:visibility="gone" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+
+                <ImageView
+                    android:id="@+id/share_to_wall_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:layout_margin="5dp"
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/ic_share"
+                    android:visibility="gone" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+
+                <ImageView
+                    android:id="@+id/forward_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:layout_margin="5dp"
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/ic_forward" />
+            </RelativeLayout>
+
+        </LinearLayout>
+
+
+    </LinearLayout>
 
     <com.wang.avi.AVLoadingIndicatorView
         android:id="@+id/progress_bar"
